# Pong

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: os-cross-compilation.yml
src/: Ball.cpp  Ball.h  Ball.hpp  Config.h.in  Enemy.hpp  Game.hpp  Player.cpp  Player.h  Player.hpp  PlayerEntity.hpp  PongGraphics.hpp  PongUtils.hpp  ResourceHolder.hpp  main.cpp
